# simplon_final_project

./: README.md  analysis.ipynb
Application/flask_app/: pyproject.toml  setup.py
Application/flask_app/flaskr/: __init__.py  auth.py  db.py  predict.py  schema.sql
Application/flask_app/flaskr/static/css/: form.css  style.css  table.css
Application/flask_app/flaskr/static/js/: nav.js
Application/flask_app/flaskr/templates/: base.html
Application/flask_app/flaskr/templates/auth/: login.html  register.html  test.html
Application/flask_app/flaskr/templates/predict/: history.html  index.html  profile.html
Application/flask_app/model/: Lasso_model.sav  ridge_model.sav
Application/flask_app/tests/: conftest.py  data.sql  test_auth.py  test_factory.py  test_predict.py
